# appinsights-rs

appinsights/: Cargo.toml
appinsights-contracts-codegen/: Cargo.toml
appinsights-contracts-codegen/src/: parser.rs
appinsights-contracts-codegen/src/compiler/: mod.rs
appinsights-contracts-codegen/src/compiler/generator/: packages.rs  schemas.rs  structs.rs  types.rs
appinsights/src/: config.rs  context.rs  lib.rs  time.rs  transmitter.rs  uuid.rs
appinsights/src/blocking/: integration_tests.rs  mod.rs
appinsights/src/channel/: memory.rs  mod.rs  state.rs
appinsights/src/client/: integration_tests.rs  mod.rs
appinsights/src/contracts/: data.rs  exception_data.rs  exception_details.rs  response.rs  stack_frame.rs
appinsights/src/telemetry/: availability.rs  event.rs  exception.rs  mod.rs  page_view.rs  remote_dependency.rs  request.rs  severity_level.rs  trace.rs
appinsights/src/telemetry/metric/: aggregation.rs  measurement.rs  stats.rs
appinsights/tests/: logger.rs  telemetry.rs  telemetry_blocking.rs
patches/: 0001-build-add-macro-feature-to-tokio-dependency.patch  0001-chore-updage-uuid-dependency-0.8-1.1.patch  0001-feat-add-TraceTelemetryBuilder.patch  0001-feat-add-set_-message-severity-to-TraceTelemetry.patch  0001-feat-constrain-TelemetryChannel-with-Send-bound.patch
