[package]
name = "appinsights"
version = "0.2.3"
authors = ["dmolokanov <dmolokanov@users.noreply.github.com>"]
edition = "2018"
description = "Application Insights SDK for Rust"
license = "MIT"
documentation = "https://docs.rs/appinsights"
repository = "https://github.com/dmolokanov/appinsights-rs"
readme = "../README.md"
keywords = ["logging", "tracing", "metrics", "APM"]
categories = ["development-tools::debugging", "development-tools::profiling"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
doctest = false

[features]
default = ["reqwest/default-tls"]
rustls = ["reqwest/rustls-tls"]
blocking = []

[dependencies]
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = "1.0"
chrono = { version = "0.4", features = ["clock"], default-features = false }
http = "1.1"
uuid = { version = "1.10", features = ["v4"], default-features = false }
reqwest = { version = "0.12", features = ["json"], default-features = false }
log = "0.4"
sm = "0.9"
tokio = { version = "1", features = ["rt", "macros"], default-features = false }
paste = "1.0"
hostname = "0.4"
futures-util = { version = "0.3", default-features = false }
futures-channel = "0.3"
crossbeam-queue = "0.3"
async-trait = "0.1.51"

[dev-dependencies]
test-case = "2.2"
env_logger = "0.9"
lazy_static = "1.4"
matches = "0.1"
graceful-shutdown = "0.3"
http-body-util = "0.1"
hyper = { version = "1", features = ["server"], default-features = false }
hyper-util = { version = "0.1", features = ["service"]}
tokio = { version = "1.21", features = [
    "macros",
    "rt-multi-thread",
    "net",
], default-features = false }
tower = { version = "0.5", features = ["util"] }
parking_lot = "0.12"

[[example]]
name = "blocking"
required-features = ["blocking"]

[[test]]
name = "telemetry_blocking"
required-features = ["blocking"]
